# PDMCoffeeBringer

./: .gitignore  README.md  rrt_star.cpp
collision_checks/: 3d_coordinate.cpp  collision_check.cpp  load_pointcloud.cpp
collision_checks/include/: 3d_coordinate.h  collision_check.h  load_pointcloud.h
collision_checks/pointcloud/: pc_edit.xyz
python_viz/: Plot of point cloud PDM .ipynb  path.txt  untitled0.py
rrt_star/: CMakeLists.txt  main.cpp
youbot_motion_controller/: CMakeLists.txt  LICENSE  README.md  package.xml
youbot_motion_controller/config/: my_world.world
youbot_motion_controller/include/: youbot_motion_controller.hpp
youbot_motion_controller/launch/: arm_controller.launch  joint_state_controller.launch  my_world.launch  youbot.launch
youbot_motion_controller/src/: youbot_configuration_publisher.cpp  youbot_configuration_publisher_node.cpp  youbot_configuration_reader.cpp  youbot_motion_controller.cpp  youbot_motion_controller_node.cpp
youbot_msgs/: CMakeLists.txt  package.xml
youbot_msgs/msg/: BaseControlSettings.msg  Control.msg  ControlSettings.msg
