<?xml version="1.0"?>
<package format="2">
  <name>youbot_motion_controller</name>
  <version>0.0.0</version>
  <description>The youbot_motion_controller package</description>
  <maintainer email="tstienstra@student.tudelft.nl">tstienstra</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>youbot_msgs</depend>
  <depend>gazebo_msgs</depend>
</package>
