<?xml version="1.0"?>
<package format="2">
    <name>youbot_msgs</name>
    <version>0.0.0</version>
    <description>Messages for controlling the YouBot</description>
    <maintainer email="tstienstra@student.tudelft.nl">tstienstra</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>std_msgs</depend>
</package>
